--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "daisyui": "5.0.0-beta.7",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
     "typescript": "~5.6.2",
