--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test3",
+  "name": "palma",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -15,7 +15,8 @@
     "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "remixicon": "^4.6.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
